# hrpc-examples

./: README.md
chat/: README.md
chat/bot/: .gitignore  Program.cs  bot.csproj  buf.gen.yaml  chat.proto
chat/client/: package.json  pnpm-lock.yaml
chat/protocol/: chat.proto
chat/server/: Cargo.toml  build.rs
chat/server/src/: main.rs
chat/tui-client/: Cargo.toml  build.rs
chat/tui-client/src/: main.rs
