[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# `prost` provides us with protobuf decoding and encoding
prost = "0.9"
# Enable hrpc's server features, and the recommended transport
hrpc = { version = "0.28.0", features = ["server", "recommended"] }
# Enable tokio's macros so we can mark our main function, and enable multi
# threaded runtime
# `tokio` is the async runtime we use
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
# Sadly, we have to get CORS support from a not merged branch of `tower-http` for now
# `tower-http` is a collection of HTTP related middleware
tower-http = { git = "https://github.com/tower-rs/tower-http.git", branch = "cors", features = [
  "cors",
] }

[build-dependencies]
# The features we enable here matches the ones we enable for `hrpc`
hrpc-build = { version = "0.28.0", features = ["server", "recommended"] }
